[gd_scene load_steps=2 format=3 uid="uid://7rk412km6ft2"]

[ext_resource type="Script" uid="uid://d1gl8tda82yx" path="res://scripts/quiz_popup.gd" id="1_8y1c6"]

[node name="QuizPopup" type="Control" node_paths=PackedStringArray("snowdrop_ref", "holly_ref", "pansy_ref")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8y1c6")
snowdrop_ref = NodePath("Panel/VBoxContainer/Snowdrop")
holly_ref = NodePath("Panel/VBoxContainer/Holly")
pansy_ref = NodePath("Panel/VBoxContainer/Pansy")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Woah there traveler
Seems you really fancy picking up all these flowers. 

We're doing a free survey, just wanted to get your thoughts on what the best coven was!

"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pansy" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Pansy"

[node name="Holly" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Holly"

[node name="Snowdrop" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Snowdrop"

[connection signal="pressed" from="Panel/VBoxContainer/Pansy" to="." method="_on_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Holly" to="." method="_on_holly_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer/Holly" to="." method="_on_holly_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/Holly" to="." method="_on_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/Snowdrop" to="." method="_on_snowdrop_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer/Snowdrop" to="." method="_on_snowdrop_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/Snowdrop" to="." method="_on_pressed"]
